<resources>
    <string name="app_name">Bees</string>
    <string name="home_title">Apiaries</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="to_do">To-Do List</string>
    <string name="settings">Settings</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_with_message">Error: %1$s</string>
    <string name="empty_state_icon_description">Empty state icon</string>
    <string name="other">Other</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_undo">UNDO</string>
    <string name="action_edit">Edit</string>
    <string name="action_exit">Exit</string>
    <string name="action_apply_changes">Apply Changes</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="label_search">Search</string>
    <string name="label_select_all">Select All</string>
    <string name="label_edit_selected">Edit Selected</string>
    <string name="label_delete_selected">Delete Selected</string>
    <string name="label_move_selected">Move Selected</string>
    <string name="label_cancel_selection">Cancel Selection</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_due_date_format">Due: %s</string>
    <string name="hint_notes_optional">Notes</string>
    <string name="hint_description_optional">Description (Optional)</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_title_delete_selected_items">Delete Selected %1$s</string>
    <string name="dialog_message_delete_selected_items">Are you sure you want to delete %1$d selected %2$s?</string>
    <string name="selected_count_format">%1$d Selected</string>
    <string name="error_field_cannot_be_empty">%1$s cannot be empty.</string>
    <string name="error_must_be_positive_number">%1$s must be a positive number.</string>
    <string name="error_invalid_number_range">Ending number must be greater than or equal to the starting number.</string>
    <string name="title_apiaries">Apiaries</string>
    <string name="title_add_apiary">Add New Apiary</string>
    <string name="title_edit_apiary">Edit Apiary</string>
    <string name="title_select_apiaries">Select Apiaries</string>
    <string name="title_bulk_edit_apiaries">Bulk Edit Apiaries</string>
    <string name="title_apiary_details">Apiary Details</string>
    <string name="label_apiary_type">Apiary Type</string>
    <string name="label_hives_count">Hives: %d</string>
    <string name="hint_apiary_name">Apiary Name</string>
    <string name="hint_apiary_location">Location</string>
    <string name="empty_state_no_apiaries">No apiaries added yet. Tap \'+\' to add one!</string>
    <string name="content_description_add_apiary">Add new apiary</string>
    <string name="content_description_edit_apiary">Edit apiary</string>
    <string name="message_apiary_deleted">Apiary deleted.</string>
    <string name="message_apiaries_deleted">%1$d apiaries deleted.</string>
    <string name="message_apiary_and_hives_added">Apiary and hives added!</string>
    <string name="message_apiary_updated">Apiary updated successfully!</string>
    <string name="message_apiaries_updated">Apiaries updated successfully</string>
    <string name="message_apiary_date_updated">Apiary date updated!</string>
    <string name="dialog_title_delete_apiary">Delete Apiary?</string>
    <string name="dialog_message_delete_apiary">Are you sure you want to delete this apiary and all its hives?</string>
    <string name="dialog_title_delete_selected_apiaries">Delete Selected Apiaries</string>
    <string name="dialog_message_delete_selected_apiaries">Are you sure you want to delete %d selected apiaries? All associated hives will also be deleted.</string>
    <string name="dialog_title_update_apiary_date">Update Apiary Date?</string>
    <string name="dialog_message_update_apiary_date">Do you want to set the apiary\'s last inspection date to this hive\'s date?</string>
    <string name="error_apiary_not_found">Apiary not found!</string>
    <string name="error_save_apiary_failed">Failed to save apiary. Please try again.</string>
    <string name="error_update_apiaries_failed">Failed to update apiaries</string>
    <string name="error_no_apiaries_selected">No apiaries selected.</string>
    <string name="error_bulk_edit_apiaries_at_least_one_field">At least one field must be filled to update.</string>
    <string name="checkbox_auto_number_hives">Automatically Number Hives in this Apiary</string>
    <string name="bulk_edit_apiaries_count">Editing %d selected apiaries</string>
    <string name="unknown_apiary">Unknown Apiary</string>
    <string-array name="apiary_types">
        <item>Stationary</item>
        <item>Migratory</item>
    </string-array>
    <string name="title_add_hive">Add New Hive</string>
    <string name="title_edit_hive">Edit Hive</string>
    <string name="title_add_multiple_hives">Add Multiple Hives</string>
    <string name="title_hive_characteristics">Hive Characteristics</string>
    <string name="title_delete_hive">Delete Hive</string>
    <string name="title_bulk_edit_hives">Bulk Edit Hives</string>
    <string name="title_hive_relocation">Hive Relocation</string>
    <string name="label_number_of_hives">Number of Hives</string>
    <string name="label_automatic_numbering">Automatic Numbering</string>
    <string name="label_starting_hive_number">Starting Hive Number</string>
    <string name="label_ending_hive_number">Ending Hive Number</string>
    <string name="label_breed">Breed</string>
    <string name="label_hive_type">Hive Type</string>
    <string name="label_frame_type">Frame Type</string>
    <string name="label_number_of_frames">Number of Frames</string>
    <string name="hint_hive_number_optional">Hive Number (Optional)</string>
    <string name="hint_last_inspection_date_optional">Last Inspection Date (Optional)</string>
    <string name="hint_other_material">Other Material</string>
    <string name="hint_other_hive_type">Other Hive Type</string>
    <string name="hint_other_frame_type">Other Frame Type</string>
    <string name="hint_other_breed">Other Breed</string>
    <string name="empty_state_no_hives">No hives added yet. Tap \'+\' to add one!</string>
    <string name="content_description_add_hive">Add new hive</string>
    <string name="message_hives_added">%d hive(s) added!</string>
    <string name="message_hives_deleted">%d hives deleted.</string>
    <string name="message_hive_updated">Hive updated successfully!</string>
    <string name="message_hives_updated">Hives updated successfully!</string>
    <string name="message_hives_moved">Hives moved successfully.</string>
    <string name="message_hive_moved_from_to">Hive moved from \'%1$s\' to \'%2$s\'.</string>
    <string name="dialog_message_delete_hive">Are you sure you want to delete Hive %s?</string>
    <plurals name="dialog_title_delete_selected_hives">
        <item quantity="one">Delete %1$d selected hive</item>
        <item quantity="other">Delete %1$d selected hives</item>
    </plurals>
    <string name="dialog_message_delete_selected_hives">Are you sure you want to delete %d selected hives?</string>
    <string name="dialog_title_move_hives">Move %1$d Hive(s) To…</string>
    <string name="error_hive_not_found">Hive not found!</string>
    <string name="error_save_hive_failed">Failed to save hive(s). Please try again.</string>
    <string name="error_move_hives_failed">Failed to move hives.</string>
    <string name="error_no_hives_selected_for_editing">No hives selected for editing.</string>
    <string name="error_no_hives_selected_for_deletion">No hives selected for deletion.</string>
    <string name="error_no_hives_selected_to_move">No hives selected to move.</string>
    <string name="error_no_other_apiaries_to_move_to">No other apiaries to move to.</string>
    <string name="error_swipe_delete_in_multiselect">Cannot swipe to delete in multi-select mode.</string>
    <string name="error_bulk_edit_quantity_mismatch">Calculated quantity (%d) must match selected hives count (%d).</string>
    <string name="hive_number_format">Hive #%s</string>
    <string name="hive_number_unknown">Hive #</string>
    <string name="hive_type_format">Type: %s</string>
    <string name="frame_type_format">Frames: %s</string>
    <string name="breed_format">Breed: %s</string>
    <string name="last_inspection_format">Last Inspection: %s</string>
    <string name="last_inspection_none">Last Inspection: None</string>
    <string name="bulk_edit_hives_count">Editing %d selected hives</string>
    <string name="bulk_edit_hives_info">Only filled fields will be updated. Leave fields blank to keep existing values.</string>
    <string name="checkbox_auto_number_selected_hives">Automatically Number Selected Hives</string>
    <string name="spinner_prompt_material">Material</string>
    <string name="spinner_prompt_hive_type">Hive Type</string>
    <string name="spinner_prompt_frame_type">Frame Type</string>
    <string name="spinner_prompt_breed">Breed</string>
    <string-array name="material_choices">
        <item>Wood</item>
        <item>Polyurethane</item>
        <item>Styrofoam</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="hive_types">
        <item>6-frame</item>
        <item>8-frame</item>
        <item>10-frame</item>
        <item>12-frame</item>
        <item>Horizontal</item>
        <item>Nuc</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="frame_types">
        <item>300</item>
        <item>230</item>
        <item>435</item>
        <item>145</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="breed_choices">
        <item>Buckfast</item>
        <item>Carniolan</item>
        <item>Carpathian</item>
        <item>Stepp</item>
        <item>Italian</item>
        <item>Local Hybrid</item>
        <item>@string/other</item>
    </string-array>
    <string name="title_add_inspection">Add New Inspection</string>
    <string name="title_edit_inspection">Edit Inspection</string>
    <string name="title_inspections_for_hive">Inspections</string>
    <string name="title_delete_inspection">Delete Inspection</string>
    <string name="title_frames">Frames</string>
    <string name="title_detailed_frames">Detailed Frame Counts</string>
    <string name="title_queen_bee">Queen Bee</string>
    <string name="hint_task_title">Task Title</string>
    <string name="hint_due_date_time_optional"><![CDATA[Due Date & Time (Optional)]]></string>
    <string name="checkbox_set_reminder">Set Reminder</string>
    <string name="title_exit_app">Exit Application</string>
    <string name="setting_theme">Dark Theme</string>
    <string name="action_export_apiary">Export Apiary</string>
    <string name="action_import_apiary">Import Apiary</string>
    <string name="contact_title">Email</string>
    <string name="contact_email_address" translatable="false">always.stung.software@gmail.com</string>
    <string name="batch_name">Batch Name</string>
    <string name="grafting_date">Grafting Date</string>
    <string name="mother_colony">Mother Colony</string>
    <string name="number_of_cells_grafted">Number of Cells Grafted</string>
    <string name="notes">Notes</string>
    <string name="save_batch">Save Batch</string>
    <string name="mother_colonies">Mother Colonies</string>
    <string name="starter_colonies">Starter Colonies</string>
    <string name="finisher_colonies">Finisher Colonies</string>
    <string name="nucleus_colonies">Nucleus Colonies</string>
</resources>