<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_export_apiary"
        android:icon="@drawable/ic_backup"
        android:title="@string/action_export_apiary"
        android:orderInCategory="10"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search_hives"
        android:icon="@drawable/ic_search"
        android:title="@string/label_search"
        android:orderInCategory="20"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_select_all_hives"
        android:icon="@drawable/ic_select_all"
        android:title="@string/label_select_all"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_move_selected_hives"
        android:icon="@drawable/ic_move"
        android:title="@string/label_move_selected"
        android:orderInCategory="110"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit_selected_hives"
        android:icon="@drawable/ic_edit"
        android:title="@string/label_edit_selected"
        android:orderInCategory="120"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_selected_hives"
        android:icon="@drawable/ic_delete"
        android:title="@string/label_delete_selected"
        android:orderInCategory="130"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel_selection"
        android:icon="@drawable/ic_cancel"
        android:title="@string/label_cancel_selection"
        android:orderInCategory="140"
        android:visible="false"
        app:showAsAction="always" />

</menu>
